wisecow-service.yml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-svc
spec:
  ports:
    - port: 80
      targetPort: 4499
  selector:
    app: wisecowapp
  type: NodePort
