ingress-svc.yml
apiVersion: v1
kind: Ingress
metadata:
  name: wisecow-ingress
spec:
  tls:
    - secretName: 192.168.49.2-tls
    hosts:
      - 192.168.49.2
  rules:
    - host: 192.168.49.2
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wisecow-svc
            port:
              number: 80
